<?xml version="1.0"?>
<package format="2">
  <name>blm6191_coverage_planners</name>
  <version>0.1.0</version>
  <description>ROS package for Assignment 4: Full Coverage Global Planner and Pure Pursuit Local Planner.</description>

  <maintainer email="student@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_core</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>angles</depend>
  <depend>visualization_msgs</depend>
  <depend>base_local_planner</depend>

  <export>
    <nav_core plugin="${prefix}/full_coverage_planner_plugin.xml" />
    <nav_core plugin="${prefix}/pure_pursuit_local_planner_plugin.xml" />
  </export>
</package>
